docs: update AGENTS.md with correct Java 17 requirement and gotchas